Linear(100%)-Cuadratic(50%)-Cubic(50%)-MVC(100%)

--- a/Equidna/Views/Home/Index.cshtml
+++ b/Equidna/Views/Home/Index.cshtml
@@ -1,8 +1,11 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Home";
 }
+
 
 <div class="jumbotron">
     <h1>Equidna</h1>
-    <p class="lead">Explora diferentes modelos de movimiento</p>
+    <br>
+    <p >Explora diferentes modelos de movimiento</p>
+   
 </div>
