--- a/Equidna/Views/Shared/_Layout.cshtml
+++ b/Equidna/Views/Shared/_Layout.cshtml
@@ -5,65 +5,97 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Architects+Daughter" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Walter+Turncoat" rel="stylesheet">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <link href="https://fonts.googleapis.com/css?family=La+Belle+Aurore" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Just+Me+Again+Down+Here" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Tillana:600" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Loved+by+the+King" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Swanky+and+Moo+Moo" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+   <!--<link href="@Url.Content("~/Content/images/unco.png")" rel='shortcut icon' type='image/png'>--> 
+    <title>@ViewBag.Title </title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/Scripts/Functions.js")
     @Scripts.Render("~/Scripts/jsxgraphcore.js")
     @Scripts.Render("~/Scripts/GeonextReader.js")
     <style>
-    .graphbox {
-        width: 100%;
-    height: 0;
-    padding-bottom: 50%;
-    }
-  table {
-                width: 100%;
-            }
+        
+         .graphbox {
+             width: 100%;
+             height: 0;
+             padding-bottom: 50%;
+         }
+        
+        h1 {
+            font-family: 'Loved by the King', cursive;
+            font-size: 500%;
+                
+        }
+        a {
+            font-family: 'Tillana', cursive;
+    
+        }
+        p {
+            font-family: 'Loved by the King', cursive;
+            font-size: 200%;
+        }
+        label {
+            font-family: 'Swanky and Moo Moo', cursive;
+            font-size: 150%;
+        }
+        .stec {
 
-            thead, tbody, tr, td, th {
-                display: block;
-            }
+            font-family: 'Swanky and Moo Moo', cursive;
+            font-size: 250%;
+        }
+        table {
+            width: 100%;
+        }
 
-                tr:after {
-                    content: ' ';
-                    display: block;
-                    visibility: hidden;
-                    clear: both;
-                }
+        thead, tbody, tr, td, th {
+            display: block;
+        }
 
-                thead th {
-                    height: 30px;
-                    /*text-align: left;*/
-                }
+        tr:after {
+            content: ' ';
+            display: block;
+            visibility: hidden;
+            clear: both;
+        }
 
-            tbody {
-                height: 148px;
-                overflow-y: auto;
-            }
+        thead th {
+            height: 30px;
+            /*text-align: left;*/
+        }
 
-            thead {
-                /* fallback */
-            }
+        tbody {
+            height: 148px;
+            overflow-y: auto;
+        }
+
+        thead {
+            /* fallback */
+        }
     
 
-                tbody td, thead th {
-                    width: 50%;
-                    float: left;
-                }
-                .fraction {
-    display: inline-block;
-    vertical-align: middle; 
-    margin: 0 0.2em 0.4ex;
-    text-align: center;
-}
-.fraction > span {
-    display: block;
-    padding-top: 0.15em;
-}
-.fraction span.fdn {border-top: thin solid black;}
-.fraction span.bar {display: none;}
-        </style>
+        tbody td, thead th {
+            width: 50%;
+            float: left;
+        }
+        .fraction {
+            display: inline-block;
+            vertical-align: middle; 
+            margin: 0 0.2em 0.4ex;
+            text-align: center;
+        }
+        .fraction > span {
+            display: block;
+            padding-top: 0.15em;
+        }
+        .fraction span.fdn {border-top: thin solid black;}
+        .fraction span.bar {display: none;}
+       
+    </style>
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -94,12 +126,13 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p style="font-family: Loved by the King, cursive; font-size: 100%; text-align: right">&copy; @DateTime.Now.Year - My ASP.NET Application</p>
         </footer>
     </div>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
+
 
     @RenderSection("scripts", required: false)
 </body>
