--- a/Equidna/Views/Shared/_Layout.cshtml
+++ b/Equidna/Views/Shared/_Layout.cshtml
@@ -25,16 +25,16 @@
              height: 0;
              padding-bottom: 50%;
          }
-        
+        i {
+         font-style: normal;
+        }
         h1 {
+            text-align: left;
             font-family: 'Loved by the King', cursive;
-            font-size: 500%;
+            font-size: 450%;
                 
         }
-        a {
-            font-family: 'Tillana', cursive;
-    
-        }
+       
         p {
             font-family: 'Loved by the King', cursive;
             font-size: 200%;
@@ -46,7 +46,7 @@
         .stec {
 
             font-family: 'Swanky and Moo Moo', cursive;
-            font-size: 250%;
+            font-size: 200%;
         }
         table {
             width: 100%;
@@ -89,10 +89,23 @@
             text-align: center;
         }
         .fraction > span {
-            display: block;
+           display: block;
             padding-top: 0.15em;
         }
-        .fraction span.fdn {border-top: thin solid black;}
+      a {
+         
+        
+           color: black;
+      }
+      a:hover {
+    text-decoration: none;
+          color: black;
+}
+
+a:active {
+    text-decoration: none;
+}
+
         .fraction span.bar {display: none;}
        
     </style>
